--- a/frontend/tgifhack-todolist/package.json
+++ b/frontend/tgifhack-todolist/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.1",
+    "redux-saga": "0.15.3",
     "tcomb-form-native": "^0.6.11"
   },
   "name": "tgifhack-todolist",
